tests/netconvert/import/XML/errors/xml_false_type_ignore/errors.netconvert
Error: Could not open types-file 'invalid.typ.xml'.
